Source/WebCore/html/HTMLMediaElement.h
@@ -583,6 +583,8 @@ private:
     virtual bool mediaPlayerGetRawCookies(const URL&, Vector<Cookie>&) const override;
 #endif
 
+    virtual bool mediaPlayerIsInMediaDocument() const override final;
+
     void loadTimerFired(Timer<HTMLMediaElement>&);
     void progressEventTimerFired(Timer<HTMLMediaElement>&);
     void playbackProgressTimerFired(Timer<HTMLMediaElement>&);
