Source/WebCore/platform/graphics/mac/MediaPlayerPrivateQTKit.mm
@@ -31,8 +31,6 @@
 
 #import "BlockExceptions.h"
 #import "DocumentLoader.h"
-#import "Frame.h"
-#import "HostWindow.h"
 #import "GraphicsContext.h"
 #import "URL.h"
 #import "Logging.h"
